--- a/package.json
+++ b/package.json
@@ -2,13 +2,21 @@
   "name": "passfort-wiki",
   "version": "0.1.0",
   "private": true,
+  "proxy":"http://localhost:5003",
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@testing-library/react": "^12.0.4",
+    "@testing-library/user-event": "^12.0.9",
+    "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
+    "moment": "^2.29.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-markdown": "^8.0.5",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.59.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
